--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==2.3.2
 Flask-Assets==2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsmin==3.0.1
 MarkupSafe==2.1.3
 python-dotenv==1.0.0
 webassets==2.0
