--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 blinker==1.6.2
 click==8.1.3
+dnspython==2.3.0
 Flask==2.3.2
 Flask-Assets==2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsmin==3.0.1
 MarkupSafe==2.1.3
+mongoengine==0.27.0
+pymongo==4.4.0
 python-dotenv==1.0.0
+rcssmin==1.1.1
 webassets==2.0
 Werkzeug==2.3.6
